--- a/App/CSUProjects/templates/components/cardProjects.html
+++ b/App/CSUProjects/templates/components/cardProjects.html
@@ -39,8 +39,8 @@
                         {% endif %}
                     </span>
                     <h5 class="card-title text-center fs-5 text-danger pe-3">{{card.title|capfirst}}</h5>
-                    <p class="card-text d-lg-block d-none w-100 fs-6 mb-1 fw-semibold">{{card.description|truncatechars:120}}</p>
-                    <p class="card-text d-lg-none d-block w-100 fs-6 mb-1 fw-semibold">{{card.description|truncatechars:35}}</p>
+                    <p class="card-text d-xl-block d-none w-100 fs-6 mb-1 fw-semibold">{{card.description|truncatechars:120}}</p>
+                    <p class="card-text d-xl-none d-block w-100 fs-6 mb-1 fw-semibold">{{card.description|truncatechars:35}}</p>
 
                     {% if 'completedProjects' in page %}
                         <div class="position-absolute sticky-bottom mb-1 end-0 d-flex align-items-end">
