--- a/App/CSUProjects/templates/components/search.html
+++ b/App/CSUProjects/templates/components/search.html
@@ -1,4 +1,4 @@
-<div class="container my-5 bg-light-primary border border-2 rounded-4 g-0 p-3 shadow">
+<div data-direction="up" data-delay="normal"  class="container my-5 bg-light-primary border border-2 rounded-4 g-0 p-3 shadow scroll-check">
     <form id="search" action={% url 'api_search' %}#projects method="get">
         {% csrf_token %}
         <div class="form-floating d-flex rounded-start" role="search">
