--- a/App/CSUProjects/templates/pages/subProjects.html
+++ b/App/CSUProjects/templates/pages/subProjects.html
@@ -4,9 +4,6 @@
 {% block cssAndScripts %}
     {% load static%}
 
-    {% include "components/csuLogoMini.html" %}
-
-    <script type="text/javascript" src={% static "/src/JScripts/themeToggle.js" %} defer></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" defer></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js" defer></script>
     
@@ -16,6 +13,7 @@
 
     <section id="about-project">
         <div class="bg-body-secondary p-3">
+
             <div class="position-absolute end-0 pe-lg-4">
                 <a href={% url 'main' %}#projects class="btn btn-outline-danger border-0">
                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 16">
@@ -24,8 +22,9 @@
                     </svg>
                 </a>
             </div>
-            <h1 class="fs-1 mb-3 pe-5">{{project.title|capfirst}}</h1>
-            <p class="text-body-secondary fs-5 px-5 fw-semibold">{{project.description|capfirst}}</p>
+
+            <h1 class="fs-1 mb-3 pe-5 appearance-right-fast">{{project.title|capfirst}}</h1>
+            <p class="text-body-secondary fs-5 px-5 fw-semibold appearance-right-normal">{{project.description|capfirst}}</p>
         </div>
         <div class="shape-container shape-line shape-position-bottom bg-body-secondary">
             <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100%" height="10%" preserveAspectRatio="xMidYMid meet">
@@ -40,9 +39,9 @@
     </section>
 
     <section id="subprojects">
-        <h1 class="fs-1 px-3">Подпроекты</h1>
+        <h1 class="fs-1 px-3 appearance-right-slow">Подпроекты</h1>
         <div class="container">
-            <div class="grid mt-5 mb-5">
+            <div class="grid mt-5 mb-5 appearance-up-slow">
                 <div class="row gy-4 gx-0 justify-content-lg-between justify-content-center align-items-center">
                 {% for card in cards%}
                     <div class="card shadow-lg rounded-4 border-2 bg-body-tertiary"
