--- a/App/CSUProjects/templates/pages/completedProjects.html
+++ b/App/CSUProjects/templates/pages/completedProjects.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %}
 {% block title %} Выполненные проекты {% endblock title %}
 
+{% block cssAndScripts %}
+
+    {% include "components/csuLogoMini.html" %}
+
+{% endblock cssAndScripts %}
+
 {% block content %}
 
     <section id="info">
