--- a/App/CSUProjects/templates/pages/cinema.html
+++ b/App/CSUProjects/templates/pages/cinema.html
@@ -3,6 +3,8 @@
 
 {% block cssAndScripts %}
     {% load static%}
+    
+    {% include "components/csuLogoMini.html" %}
 
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css'>
     <link rel="stylesheet" href={% static "/css/cinema.css"%}>
