--- a/App/CSUProjects/templates/pages/subProjects.html
+++ b/App/CSUProjects/templates/pages/subProjects.html
@@ -4,6 +4,8 @@
 {% block cssAndScripts %}
     {% load static%}
 
+    {% include "components/csuLogoMini.html" %}
+    
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" defer></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js" defer></script>
     
